--- a/src/app/unAuth/sign-up/sign-up.component.html
+++ b/src/app/unAuth/sign-up/sign-up.component.html
@@ -27,18 +27,24 @@
           [placeholder]="'Phone Name'"
           [control]="formGroup.controls.phoneNumber"
         ></app-input>
+     
+        <app-input
+        [iconName]="'location-outline'"
+          [placeholder]="'City'"
+          [control]="formGroup.controls.city"
+        ></app-input>
         <app-input
         [iconName]="'mail-outline'"
           [placeholder]="'Email'"
           [control]="formGroup.controls.email"
         ></app-input>
         <app-input
-        [iconName]="'location-outline'"
-          [placeholder]="'City'"
-          [control]="formGroup.controls.city"
+        [iconName]="'mail-outline'"
+          [placeholder]="'password'"
+          [control]="formGroup.controls.password"
         ></app-input>
         <div class="button mt-4">
-          <app-button (click)="signIn()"  [title]="'LOGIN'"></app-button>
+          <app-button (click)="signUp()"  [title]="'LOGIN'"></app-button>
         </div>
         <div class="have-account-redirect text-center pt-4 fixed-bottom p-3">
             <ion-text>
