--- a/src/app/shared/components/text-area/text-area.component.html
+++ b/src/app/shared/components/text-area/text-area.component.html
@@ -2,7 +2,7 @@
   <!-- <input  placeholder={{placeholder}}  [formControl]="control"/> -->
   <ion-list>
     <ion-item lines="none">
-      <ion-textarea aria-label="Comments"  placeholder="kenneth"></ion-textarea>
+      <ion-textarea aria-label="Comments" [formControl]="control"  placeholder="{{placeholder}}"></ion-textarea>
     </ion-item>
   </ion-list>
 </div>
