--- a/src/app/auth/profile/profile.component.scss
+++ b/src/app/auth/profile/profile.component.scss
@@ -50,7 +50,26 @@
       }
 
     }
+    .spinner-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5); /* Change the last value (0.5) for the desired opacity */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999; /* Adjust z-index as needed to ensure it's above other content */
+    }
   
+    .logout-button{
+      width: 95%;
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: 20px;
+      height: 45px !important;
+    }
  
 
 }
