--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -8,6 +8,7 @@
     }
     ion-header {
         background-color: transparent !important;
+        width: 100% !important;
     }
    .no-background {
         --background: transparent !important;
