--- a/src/app/unAuth/sign-up/sign-up.component.scss
+++ b/src/app/unAuth/sign-up/sign-up.component.scss
@@ -3,4 +3,10 @@
         text-decoration: none !important;
         color:  #16924a;;
     }
+
+        img{
+            height: 150px;
+            width: 150px;
+        }
+    
 }
