--- a/src/app/unAuth/sign-up/sign-up.component.html
+++ b/src/app/unAuth/sign-up/sign-up.component.html
@@ -2,11 +2,13 @@
   <div class="fluid">
     <div class="row justify-content-center ">
       
-      <div class="col mt-5 p-3 col-sm-12 col-md-6 col-lg-5 mt-md-5 pt-md-4">
-        <div class="logo pt-5 mt-1">
-          <h1 class="text-center">LOGO</h1>
+      <div class="col  p-3 col-sm-12 col-md-6 col-lg-5 mt-md-5 pt-md-4">
+        <div class="logo pt-2 mt-5 text-center p-2">
+          <ion-text class="text-center">
+            <img alt="logo" [src]="logoImage" />
+          </ion-text>
         </div>
-        <div class="heading text-center text-muted">
+        <div class="heading text-center text-muted p-3">
           <ion-text>
             <h3>Service Provider Acoount Details</h3>
           </ion-text>
