--- a/src/app/shared/components/input/input.component.html
+++ b/src/app/shared/components/input/input.component.html
@@ -4,6 +4,7 @@
     <ion-input
       placeholder="{{ placeholder }}"
       [formControl]="control"
+      [type]="type"
     ></ion-input>
     <ion-icon  [name]="iconName" slot="start"></ion-icon>
   </ion-item>
