--- a/src/app/unAuth/sign-in/sign-in.component.html
+++ b/src/app/unAuth/sign-in/sign-in.component.html
@@ -2,6 +2,9 @@
   <div class="fluid">
     <div class="row justify-content-center">
       <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="spinner-overlay" *ngIf="spinner">
+          <ion-spinner color="success" name="lines"></ion-spinner>
+        </div>
         <div class="logo pt-5 mt-5 text-center p-2">
           <ion-text class="text-center">
             <img alt="logo" [src]="logoImage" />
@@ -21,7 +24,7 @@
         <app-input
           [iconName]="'call-outline'"
           [placeholder]="'Password'"
-          type="password"
+          [type]="'password'"
           [control]="formGroup.controls.password"
         ></app-input>
         <div class="button mt-4">
