--- a/src/app/unAuth/sign-in/sign-in.component.scss
+++ b/src/app/unAuth/sign-in/sign-in.component.scss
@@ -3,4 +3,16 @@
         height: 150px;
         width: 150px;
     }
+    .spinner-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5); /* Change the last value (0.5) for the desired opacity */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 9999; /* Adjust z-index as needed to ensure it's above other content */
+      }
 }
